[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node.gd" type="Script" id=1]

[node name="Node" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 46.0
margin_top = 486.0
margin_right = 233.0
margin_bottom = 557.0

[node name="Button2" type="Button" parent="."]
margin_left = 425.0
margin_top = 487.0
margin_right = 611.0
margin_bottom = 551.0

[node name="Button3" type="Button" parent="."]
margin_left = 766.0
margin_top = 477.0
margin_right = 962.0
margin_bottom = 557.0

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 286.0
margin_top = 37.0
margin_right = 741.0
margin_bottom = 126.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Label" type="Label" parent="."]
margin_left = 127.0
margin_top = 240.0
margin_right = 329.0
margin_bottom = 329.0

[node name="Label2" type="Label" parent="."]
margin_left = 598.0
margin_top = 256.0
margin_right = 823.0
margin_bottom = 364.0

[node name="Label3" type="Label" parent="."]
margin_left = 360.0
margin_top = 136.0
margin_right = 663.0
margin_bottom = 198.0
text = "escreva um nome e depois algum numero
ex: Erik 12"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
